# timeconv

./: .gitignore  CMakeLists.txt  main.cpp  mainwindow.h  time-conv-wx.sln  time-conv-wx.vcxproj  time-conv-wx.vcxproj.filters  timeutils.h
res/: gen.sh  res.cpp  res.h
